force-app/main/default/objects/Essential_Living_Publication__c/Essential_Living_Publication__c.object-meta.xml
<CustomObject>
    <description>This object houses Essential Living publication information (key dates, editorial letters, sample materials, etc.)</description>
    <label>Essential Living Publication</label>
    <nameField>
        <label>Essential Living Issues Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Essential Living Publications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>