force-app/main/default/objects/Essential_Living_Publication__c/fields/Back_Cover_Ad_Form__c.field-meta.xml
<CustomField>
    <fullName>Back_Cover_Ad_Form__c</fullName>
    <label>Back Cover Ad Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>