force-app/main/default/objects/Essential_Living_Publication__c/fields/Contact_List_Form__c.field-meta.xml
<CustomField>
    <fullName>Contact_List_Form__c</fullName>
    <label>Contact List Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>