force-app/main/default/objects/Essential_Living_Publication__c/fields/Delivery_End__c.field-meta.xml
<CustomField>
    <fullName>Delivery_End__c</fullName>
    <label>Delivery End</label>
    <type>Date</type>
</CustomField>