force-app/main/default/objects/Essential_Living_Publication__c/fields/Delivery_Start__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Start__c</fullName>
    <label>Delivery Start</label>
    <type>Date</type>
</CustomField>