force-app/main/default/objects/Essential_Living_Publication__c/fields/Editor_s_Letter__c.field-meta.xml
<CustomField>
    <fullName>Editor_s_Letter__c</fullName>
    <label>Editor&apos;s Letter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>