force-app/main/default/objects/Essential_Living_Publication__c/fields/Editor_s_Letter_Form__c.field-meta.xml
<CustomField>
    <fullName>Editor_s_Letter_Form__c</fullName>
    <label>Editor&apos;s Letter Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>