force-app/main/default/objects/Essential_Living_Publication__c/fields/Issue_Number__c.field-meta.xml
<CustomField>
    <fullName>Issue_Number__c</fullName>
    <description>Issue Number</description>
    <inlineHelpText>Issue Number - displayed on account page</inlineHelpText>
    <label>Issue Number</label>
    <length>155</length>
    <type>Text</type>
</CustomField>