force-app/main/default/objects/Essential_Living_Publication__c/fields/Issue_Sample__c.field-meta.xml
<CustomField>
    <fullName>Issue_Sample__c</fullName>
    <label>Issue Sample</label>
    <length>255</length>
    <type>Text</type>
</CustomField>