force-app/main/default/objects/Essential_Living_Publication__c/fields/Last_day_to_submit_changes__c.field-meta.xml
<CustomField>
    <fullName>Last_day_to_submit_changes__c</fullName>
    <label>Last day to submit changes</label>
    <type>Date</type>
</CustomField>