force-app/main/default/objects/Essential_Living_Publication__c/fields/Publication_Code__c.field-meta.xml
<CustomField>
    <fullName>Publication_Code__c</fullName>
    <label>Publication Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ELM</fullName>
                <default>true</default>
                <label>ELM</label>
            </value>
            <value>
                <fullName>ESC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>