force-app/main/default/objects/Essential_Living_Publication__c/fields/Publication_Guts__c.field-meta.xml
<CustomField>
    <fullName>Publication_Guts__c</fullName>
    <inlineHelpText>Guts location for this month&apos;s ELM</inlineHelpText>
    <label>Publication Guts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>