force-app/main/default/objects/Essential_Living_Publication__c/fields/Publication_Month_Date__c.field-meta.xml
<CustomField>
    <fullName>Publication_Month_Date__c</fullName>
    <description>First day of publication month for sorting purposes</description>
    <inlineHelpText>First day of publication month for sorting purposes</inlineHelpText>
    <label>Publication Month Date</label>
    <type>Date</type>
</CustomField>