force-app/main/default/objects/Essential_Living_Publication__c/fields/Publication_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Publication_SF_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publication SF ID</label>
    <type>Text</type>
</CustomField>