force-app/main/default/objects/Essential_Living_Publication__c/fields/Sales_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_End_Date__c</fullName>
    <description>Last order date accepted in this issue</description>
    <inlineHelpText>Last order date accepted in this issue</inlineHelpText>
    <label>Sales End Date</label>
    <type>Date</type>
</CustomField>