force-app/main/default/objects/Essential_Living_Publication__c/fields/Sales_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Start_Date__c</fullName>
    <description>Purchases on or after this day will start with this issue.</description>
    <inlineHelpText>Purchases on or after this day will start with this issue.</inlineHelpText>
    <label>Sales Start Date</label>
    <type>Date</type>
</CustomField>