force-app/main/default/objects/Essential_Living_Publication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>billie</label>
</ListView>