force-app/main/default/objects/Essential_Living_Publication__c/listViews/Essential_Living_Magazine_Active.listView-meta.xml
<ListView>
    <fullName>Essential_Living_Magazine_Active</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Issue_Sample__c</columns>
    <columns>Last_day_to_submit_changes__c</columns>
    <filterScope>Everything</filterScope>
    <label>Essential Living Magazine – Active</label>
    <language>en_US</language>
</ListView>