force-app/main/default/objects/Essential_Living_Publication__c/listViews/Essential_Living_Magazine_All.listView-meta.xml
<ListView>
    <fullName>Essential_Living_Magazine_All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Issue_Sample__c</columns>
    <columns>Last_day_to_submit_changes__c</columns>
    <columns>Delivery_Start__c</columns>
    <columns>Delivery_End__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Publication_Month_Date__c</columns>
    <columns>Sales_Start_Date__c</columns>
    <columns>Sales_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>104</value>
    </filters>
    <label>Essential Living Magazine - All</label>
    <language>en_US</language>
</ListView>